<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditInvoiceDialog</class>
 <widget class="QDialog" name="EditInvoiceDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1000</width>
    <height>800</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Sửa Hóa Đơn</string>
  </property>
  <property name="styleSheet">
   <string>background-color: #F5F5F5; color: black;</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="invoiceGroup">
     <property name="title">
      <string>Thông tin hóa đơn</string>
     </property>
     <property name="styleSheet">
      <string>background-color: #D9E8FF; color: black;</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Mã hóa đơn:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="invoiceId">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string>background-color: #E6F3FF; color: black;</string>
        </property>
       </widget>
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Mã khách hàng:</string>
        </property>
       </widget>
      </item>
      <item row="9" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Ngày lập:</string>
        </property>
       </widget>
      </item>
      <item row="9" column="1">
       <widget class="QDateEdit" name="invoiceDate">
        <property name="displayFormat">
         <string>dd/MM/yyyy</string>
        </property>
        <property name="calendarPopup">
         <bool>true</bool>
        </property>
        <property name="styleSheet">
         <string>background-color: #E6F3FF; color: black;</string>
        </property>
       </widget>
      </item>
      <item row="8" column="1">
       <widget class="QComboBox" name="employeeCombo">
        <property name="styleSheet">
         <string>background-color: #E6F3FF; color: black;</string>
        </property>
       </widget>
      </item>
      <item row="6" column="1">
       <widget class="QLineEdit" name="customerId">
        <property name="styleSheet">
         <string>background-color: #E6F3FF; color: black;</string>
        </property>
       </widget>
      </item>
      <item row="8" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Nhân viên</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="productGroup">
     <property name="title">
      <string>Danh sách sản phẩm</string>
     </property>
     <property name="styleSheet">
      <string>background-color: #C4E4C4; color: black;</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Danh mục:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QComboBox" name="categoryCombo">
          <property name="styleSheet">
           <string>background-color: #E6F3FF; color: black;</string>
          </property>
          <item>
           <property name="text">
            <string>Thú cưng</string>
           </property>
          </item>
          <item>
           <property name="text">
            <string>Sản phẩm</string>
           </property>
          </item>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>Số lượng:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="quantitySpinBox">
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>999</number>
          </property>
          <property name="value">
           <number>1</number>
          </property>
          <property name="styleSheet">
           <string>background-color: #E6F3FF; color: black;</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QTableWidget" name="productTable">
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
        <property name="styleSheet">
         <string>background-color: #FFFFFF; color: black; alternate-background-color: #F0F0F0;</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <widget class="QPushButton" name="addToInvoiceButton">
          <property name="text">
           <string>Thêm vào hóa đơn</string>
          </property>
          <property name="styleSheet">
           <string>background-color: #FFD700; color: black;</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="detailGroup">
     <property name="title">
      <string>Chi tiết hóa đơn</string>
     </property>
     <property name="styleSheet">
      <string>background-color: #FFF3E0; color: black;</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QTableWidget" name="detailTable">
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
        <property name="styleSheet">
         <string>background-color: #FFFFFF; color: black; alternate-background-color: #F0F0F0;</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="editDetailButton">
          <property name="text">
           <string>Sửa chi tiết</string>
          </property>
          <property name="styleSheet">
           <string>background-color: #FFD700; color: black;</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="deleteDetailButton">
          <property name="text">
           <string>Xóa chi tiết</string>
          </property>
          <property name="styleSheet">
           <string>background-color: #FF6B6B; color: black;</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="totalLabel">
          <property name="text">
           <string>Tổng tiền:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="totalAmount">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
          <property name="styleSheet">
           <string>background-color: #E6F3FF; color: black;</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="saveButton">
       <property name="text">
        <string>Lưu</string>
       </property>
       <property name="styleSheet">
        <string>background-color: #4CAF50; color: black;</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="cancelButton">
       <property name="text">
        <string>Hủy</string>
       </property>
       <property name="styleSheet">
        <string>background-color: #FF6B6B; color: black;</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>